# storm-project-starter-cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: buildtest.yml
examples/: die.pctl  die2.pctl
src/: main.cpp
